# apex

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  LICENSE  Makefile  README.md  README.tr.md  Snakefile_train  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/graphs/: .last-build-snapshot.json  GRAPH_REPORT.md  graph.html  graph.json
.planning/phases/01-project-skeleton-config/: 01-CONTEXT.md  01-PLAN-01.md  01-RESEARCH.md  01-SUMMARY-01.md
.planning/phases/02-docker-database-foundation/: 02-01-SUMMARY.md  02-CONTEXT.md  02-PLAN-01.md  02-RESEARCH.md
.planning/phases/03-fastapi-data-ingestion-core/: 03-CONTEXT.md  03-PLAN-01.md  03-PLAN-02.md  03-PLAN-03.md  03-RESEARCH.md  03-SUMMARY.md
.planning/phases/04-database-schema-data-pipeline-completion/: 04-CONTEXT.md  04-PLAN-01.md  04-PLAN-02.md  04-RESEARCH.md
.planning/phases/05-domain-models-core-services/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-03-SUMMARY.md  05-CONTEXT.md  05-PLAN-01.md  05-PLAN-02.md  05-PLAN-03.md  05-RESEARCH.md  05-REVIEW.md  05-VERIFICATION.md
.planning/phases/06-langgraph-agents-individual/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-CONTEXT.md  06-PLAN-01.md  06-PLAN-02.md  06-RESEARCH.md  06-REVIEW.md  06-VERIFICATION.md
.planning/phases/07-workflow-assembly-resilience/: 07-01-SUMMARY.md  07-02-SUMMARY.md  07-03-SUMMARY.md  07-CONTEXT.md  07-PLAN-01.md  07-PLAN-02.md  07-PLAN-03.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/research/: SUMMARY.md
.streamlit/: config.toml
docker/observability/: grafana-datasources.yml  loki-config.yml  prometheus.yml  promtail-config.yml
docker/postgres/: init.sql  postgresql.conf
docker/redis/: redis.conf
docs/: DEPLOYMENT_RUNBOOK.md  PHASE_11_CHANGELOG.md  PHASE_13_CHANGELOG.md  PHASE_14.1_CHANGELOG.md  PHASE_14_CHANGELOG.md  PHASE_3_4_CHANGELOG.md  PHASE_5_CHANGELOG.md  PHASE_6_CHANGELOG.md  PHASE_7_CHANGELOG.md  PHASE_8_CHANGELOG.md  PHASE_9_CHANGELOG.md  SERVER_GEREKSINIM_RAPORU.md  WEB_STACK_REVIVAL_GUIDE.md  _TEMPLATE_PHASE_REPORT.md
docs/adr/: ADR-001-langgraph.md  ADR-002-postgresql-pgvector.md  ADR-003-monolith-first.md  ADR-004-redis-8.md
k8s/: README.md
k8s/base/: configmap.yaml  cronjob.yaml  deployment-api.yaml  deployment-frontend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  secrets.yaml  service-api.yaml  service-frontend.yaml
migrations/: env.py
migrations/versions/: 4c4190a3b8d1_initial_schema.py
models/quant/: catboost.pkl  ensemble_voter.pkl  evaluation.txt  features.parquet  lightgbm.pkl  metadata.json  raw_data.parquet  scaler.pkl  xgboost.pkl
plans/: BET2_PLAN.md  BET3_PLAN.md
scripts/: backup_postgres.sh  import_apex_to_plane.py  install.sh  restore_postgres.sh  seed_data.py  train_models.sh  weekly_restore_test.sh
src/apex/: __init__.py
src/apex/api/: app.py  (+4 more)
tests/: conftest.py  test_placeholder.py
tests/e2e/: conftest.py  test_full_pipeline.py
tests/integration/: conftest.py  test_data_client.py  test_health.py
tests/unit/: test_agents_phase6.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_data_pipeline.py  test_fallback.py  test_history_store.py  test_local_analysis.py  test_local_knowledge.py  test_localization.py  test_market_snapshot.py  test_ml_device.py  test_ml_features.py  test_quant_agent.py  test_reports.py  test_tui_app.py  test_tui_commands.py  test_watchlist.py  test_workflow.py
(+172 files in other folders)
