[project]
name = "apex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "EnesDemir143", email = "enesd41@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "alpaca-py>=0.35.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.1.9",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-sdk>=1.30.0",
    "pandas>=2.2.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.8.0",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.1.0",
    "uvicorn[standard]>=0.34.0",
    "yfinance>=1.3.0",
]

[project.scripts]
apex = "apex:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "testcontainers>=4.10.0",
    "vcrpy>=7.0.0",
]
