[project]
name = "apex"
version = "0.1.0"
description = "Multi-Agent Based Automated Trading System — 4 AI agents producing BUY/SELL/HOLD signals"
readme = "README.md"
authors = [
    { name = "EnesDemir143", email = "enesd41@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "alpaca-py>=0.35.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langsmith>=0.3.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-logging>=0.62b1",
    "opentelemetry-sdk>=1.30.0",
    "pandas>=2.2.0",
    "pandas-market-calendars>=4.0.0",
    "pgvector>=0.3.6",
    "plotly>=6.0.0",
    "psycopg-binary>=3.3.3",
    "psycopg-pool>=3.3.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.8.0",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "streamlit>=1.56.0",
    "structlog>=25.1.0",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.34.0",
    "yfinance>=1.3.0",
]

[project.scripts]
apex = "apex.cli.main:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "testcontainers>=4.10.0",
    "vcrpy>=7.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Frontend: sys.path bootstrap causes E402/I001; HTML f-strings cause E501; semicolons in Streamlit callbacks cause E702
"src/apex/frontend/**" = ["E402", "E501", "I001", "E702"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*", "yfinance", "yfinance.*", "pandas_market_calendars", "pandas_market_calendars.*", "pgvector", "pgvector.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = ["plotly", "plotly.*", "streamlit", "streamlit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apex.frontend.*"]
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers",
]
